trocar List.of() para Collections.singletonList()